// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClipboardBase should display correctly 1`] = `
<Button>
  copy
</Button>
`;

exports[`ClipboardButton should display correctly 1`] = `
<Tooltip
  overlay="copied_action"
  visible={false}
>
  <Button
    className="no-select"
    data-clipboard-text="foo"
    innerRef={[Function]}
  >
    copy
  </Button>
</Tooltip>
`;

exports[`ClipboardButton should render a custom label if provided 1`] = `
<Tooltip
  overlay="copied_action"
  visible={false}
>
  <Button
    className="no-select"
    data-clipboard-text="foo"
    innerRef={[Function]}
  >
    Foo Bar
  </Button>
</Tooltip>
`;

exports[`ClipboardIconButton should display correctly 1`] = `
<ButtonIcon
  className="no-select"
  data-clipboard-text="foo"
  innerRef={[Function]}
  tooltip="copy_to_clipboard"
>
  <CopyIcon />
</ButtonIcon>
`;
